# trace_dataflow_graph

./: README.md  __init__.py  build_cache.py  cli.py  elf_reader.py  event_merger.py  export.py  graph_builder.py  mcp_server.py  models.py  pyproject.toml  query.py  trace_parser.py
tests/: __init__.py  conftest.py  test_export.py  test_integration.py
