[tool.poetry]
name = "trace-dataflow-graph"
version = "0.1.0"
description = "Dataflow graph construction and analysis for gem5 instruction trace data"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyelftools = "^0.29"
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.buildinfo"